<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2022-2023 The SuperiorOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Superior Wallpapers</string>

    <!-- Wallpapers by Yash -->
    <string name="material_walls">Superior Material</string>
    <string name="author_1">Yash Kachave</string>
    <string name="wallpaper_logo_yellow">Superior Yellow</string>
    <string name="wallpaper_logo_purple">Superior Purple</string>
    <string name="wallpaper_logo_blue">Superior Blue</string>
    <string name="wallpaper_logo_green">Superior Green</string>
    <!-- Wallpapers by Sree -->
    <string name="author_2">Sree_srt</string>
    <string name="sree_yellow">Material Yellow</string>
    <string name="sree_green">Material Green</string>
</resources>
