<!-- Copyright (C) 2022 SuperiorOS

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <category id="material" title="@string/material_walls" featured="Logo Yellow">

        <static-wallpaper
            id="Logo Yellow"
            src="@drawable/Superior_Material_01"
            title="@string/wallpaper_logo_yellow"
            subtitle1="@string/author_1" />

        <static-wallpaper
            id="Logo Purple"
            src="@drawable/Superior_Material_02"
            title="@string/wallpaper_logo_purple"
            subtitle1="@string/author_1" />

        <static-wallpaper
            id="Logo Blue"
            src="@drawable/Superior_Material_03"
            title="@string/wallpaper_logo_blue"
            subtitle1="@string/author_1" />

        <static-wallpaper
            id="Logo Green"
            src="@drawable/Superior_Material_04"
            title="@string/wallpaper_logo_green"
            subtitle1="@string/author_1" />
    </category>

</resources>
